# M5stampS3-rainbow

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults  shell.nix
.cargo/: config.toml
src/: main.rs
