[package]
name = "m5stamp"
version = "0.1.0"
authors = ["Zie Sturges <zie@sturges.com.au>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "m5stamp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [ "embassy-time-driver", "embassy-sync"] }
ws2812-esp32-rmt-driver = { version ="0.12.0"}
anyhow = "1.0.97"
hsv = "0.1.1"

[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf-sys]
partition_table = "partitions.csv"
